# ml-flow

./: .dockerignore  .gitignore  Dockerfile  README.md  USAGE_SCENARIO.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  router.py
backend/app/api/routes/: __init__.py  dashboard.py  training.py  workspace.py
backend/app/core/: __init__.py  config.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  dashboard_seed.py  training.py  workspace.py
backend/app/schemas/: __init__.py  dashboard.py  training.py  workspace.py
backend/app/services/: __init__.py  autolabel_service.py  dashboard_service.py  dataset_scanner.py  training_service.py  workspace_service.py
backend/mlforge_v2_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_health.py  test_models.py  test_pipelines.py  test_settings.py  test_training.py
frontend/: MODAL_SYSTEM.md  NOTIFICATIONS.md  REACT_QUERY.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/ui/: badge.tsx  (+6 more)
frontend/src/context/: ModalContext.tsx  NotificationContext.tsx  index.ts
frontend/src/hooks/: index.ts  useDashboard.ts  useDatasets.ts  useModal.ts  useModels.ts  useNotification.ts  usePipelines.ts  useProjects.ts  useSettings.ts  useTraining.ts
frontend/src/lib/: api.test.ts  api.ts  format.ts  queryClient.ts
frontend/src/types/: dashboard.ts  navigation.ts  workspace.ts
(+14 files in other folders)
